# pipewright

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ciwright/: __init__.py  __main__.py  apply.py  cli.py  detect.py  models.py  patch.py  profile.py  report.py  rules.py  score.py  usage.py  workflows.py
src/pipewright/: __init__.py  __main__.py  apply.py  cli.py  detect.py  models.py  patch.py  profile.py  report.py  rules.py  score.py  usage.py  workflows.py
tests/: conftest.py  test_apply.py  test_detect.py  test_patch.py  test_profile.py  test_rules.py  test_score.py  test_security.py  test_usage.py
